--- a/index.html
+++ b/index.html
@@ -26,6 +26,133 @@
     <title>THE SPICE LOUNGE</title>
   </head>
   <body>
+    <nav class="navbar navbar-main navbar-expand-lg navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">THE<span>SPICE</span>LOUNGE</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"
+                >ANA SAYFA</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">HAKKIMIZDA</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">MENU</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">REZERVASYON</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">İLETİŞİM</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <header>
+      <ul class="social-media">
+        <li>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </li>
+      </ul>
+
+      <div class="contact">
+        <div class="address">
+          #12 FIFTH MAIN STREET,<br />
+          NY 10307, USA.
+        </div>
+        <div class="phone"><i class="fas fa-phone-alt"></i> +1123 456 7890</div>
+      </div>
+    </header>
+
+    <footer>
+      <ul>
+        <li>
+          <a href="#"
+            ><i class="fas fa-film"></i> <span class="title">VİDEOLAR</span></a
+          >
+        </li>
+        <li>
+          <a href="#" class="button"
+            ><i class="fas fa-calendar-alt"></i>
+            <span class="title"><small>YAKLAŞAN</small><br />ETKİNLİK</span></a
+          >
+        </li>
+        <li>
+          <a href="#"
+            ><i class="fas fa-utensils"></i>
+            <span class="title"><small>GÜNÜN</small><br />SPESİYALİ</span></a
+          >
+        </li>
+      </ul>
+    </footer>
+
+    <div
+      id="carouselExampleControls"
+      class="carousel slide"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div
+          class="carousel-item active"
+          style="background-image: url('assets/img/2.jpg')"
+        ></div>
+        <div
+          class="carousel-item"
+          style="background-image: url('assets/img/3.jpg')"
+        ></div>
+        <div
+          class="carousel-item"
+          style="background-image: url('assets/img/4.jpg')"
+        ></div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleControls"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
