--- a/sezai.html
+++ b/sezai.html
@@ -53,16 +53,16 @@
                     class="fab fa-whatsapp"></i></a>
             <a href="tel:905309177077" data-bs-toggle="tooltip" data-bs-placement="top" title="Bizi Arayın"><i
                     class="fas fa-phone"></i></a>
-            <a href="#" data-bs-toggle="tooltip" data-bs-placement="top" title="Online Chat"><i
-                    class="fas fa-comment-dots"></i></a>
+            <a href="#" data-bs-toggle="tooltip" data-bs-placement="top" title="Online Chat">
+                <i class="fas fa-comment-dots"></i></a>
         </div>
 
-        <form action="">
+        <form class="date" action="">
             <div class="mb-3">
                 <h4 class="text-light">PICK YOUR DATE & TIME</h4>
                 <input type="text" class="form-control form-control-s" id="name" autocomplete="off" required />
                 <a href="#"><i class="fas fa-calendar-alt"></i></a>
-                <a href=""><i class="fas fa-times "></i></a>
+                <a class="text-dark" href="#"><i class="fas fa-times "></i></a>
             </div>
             <div class="mb-3">
                 <h4 class="text-light mt-4">RESERVATION DETAILS</h4>
@@ -82,7 +82,9 @@
             </div>
         </form>
     </section>
+<footer class="son">
     <h6 class="text-light">COPYRIGHTS THE SPICE LOUNGE 2015.</h6>
+</footer>
 </body>
 
 </html>
